--- a/PultDecontaminator/Views/MainWindow.xaml
+++ b/PultDecontaminator/Views/MainWindow.xaml
@@ -10,10 +10,12 @@
         Title="Пульт управления деконтаминатором" Height="450" Width="800">
     <Grid Background="#FFB7BFC1" IsEnabled="{Binding AuthTrue}">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="263*" />
+            <ColumnDefinition />
             <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="359*" />
-            <ColumnDefinition Width="168*"/>
+            <ColumnDefinition Width="0.5*" />
+            <ColumnDefinition Width="0.5*"/>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"></RowDefinition>
@@ -23,25 +25,32 @@
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="0.5*"></RowDefinition>
         </Grid.RowDefinitions>
+
         <GridSplitter Grid.Column="1"  Grid.Row="0" Width="2" 
-                          HorizontalAlignment="Center" VerticalAlignment="Stretch" Grid.RowSpan="4" />
+                      HorizontalAlignment="Center" VerticalAlignment="Stretch" Grid.RowSpan="4" />
+        <GridSplitter Grid.Column="4"  Grid.Row="0" Width="2" 
+                      HorizontalAlignment="Center" VerticalAlignment="Stretch" Grid.RowSpan="6" />
         <GridSplitter Grid.Row="4" Grid.ColumnSpan="4" Height="2"
                       HorizontalAlignment="Stretch" VerticalAlignment="Center" />
         <Label Content="Выбор установки:" HorizontalAlignment="Left" Margin="10,10,0,0" Width="130" Height="32" VerticalAlignment="Top" />
-        <ComboBox Text="Номер деконтоминатора" Margin="145,10,10,0" Height="32" VerticalAlignment="Top" ItemsSource="{Binding Decontominators}" >
+        <ComboBox Text="Номер деконтоминатора" Margin="145,10,10,0" Height="32" VerticalAlignment="Top" ItemsSource="{Binding Decontaminators}" SelectedIndex="0">
             <ComboBox.Effect>
                 <DropShadowEffect BlurRadius="3" Color="#FF4F4343" Opacity="0.815" ShadowDepth="3"/>
             </ComboBox.Effect>
 
         </ComboBox>
 
-        <StackPanel  Grid.Column="0" Grid.Row="1" Grid.RowSpan="2">
+        <StackPanel  Grid.Column="0" Grid.Row="1" Grid.RowSpan="3">
             <Frame Height="30"></Frame>
-            <Button Command="{Binding ExecuteStopCommand}" FontSize="14">Останов</Button>
+            <Button Command="{Binding ExecuteStopCommand}" FontSize="14" IsEnabled="False">Останов</Button>
             <Frame Height="30"></Frame>
-            <Button Command="{Binding ExecuteDecontaminationCommand}" FontSize="14">Деконтаминация</Button>
+            <Button Command="{Binding ExecuteStartDecontaminationCommand}" FontSize="14" IsEnabled="False">Деконтаминация</Button>
             <Frame Height="30"></Frame>
-            <Button Command="{Binding ExecuteDryCommand}" FontSize="14">Осушение воздуха</Button>
+            <Button Command="{Binding ExecuteStartDryCommand}" FontSize="14" IsEnabled="False">Осушение воздуха</Button>
+            <Frame Height="40"></Frame>
+            <Button Command="{Binding ExecuteOpenComPortCommand}" FontSize="14" >Open COM Port</Button>
+            <Frame Height="20"></Frame>
+            <Button Command="{Binding ExecuteCloseComPortCommand}" FontSize="14" IsEnabled="False" >Close  COM Port</Button>
         </StackPanel>
         <TextBlock TextWrapping="Wrap" Text="текущий режим и этап работы деконтаминатора" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" TextAlignment="Center" FontSize="16" Grid.Column="2" Grid.Row="0"/>
         <TextBlock TextWrapping="Wrap" Text="текущее значение температуры" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" TextAlignment="Center" FontSize="16" Grid.Column="2" Grid.Row="1" />
