--- a/PultDecontaminator/Views/MainWindow.xaml
+++ b/PultDecontaminator/Views/MainWindow.xaml
@@ -7,8 +7,8 @@
         xmlns:prism="http://prismlibrary.com/"
         prism:ViewModelLocator.AutoWireViewModel="True"
         mc:Ignorable="d"
-        Title="{Binding UpdateText}" Height="450" Width="1116">
-    <Grid Background="#FFB7BFC1" IsEnabled="{Binding AuthTrue}">
+        Title="{Binding UpdateText}" Height="442" Width="1184">
+    <Grid Background="#FFB7BFC1" IsEnabled="{Binding AuthTrue}" Margin="2,2,2,2">
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
             <ColumnDefinition Width="Auto" />
@@ -18,14 +18,16 @@
             <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="1*"></RowDefinition>
+            <RowDefinition Height="0.5*"/>
+            <RowDefinition Height="0.5*"></RowDefinition>
+            <RowDefinition Height="0.5*"></RowDefinition>
+            <RowDefinition Height="0.5*"></RowDefinition>
+            <RowDefinition Height="0.5*"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="0.5*"></RowDefinition>
         </Grid.RowDefinitions>
-        <ListView x:Name="ListViewRegisters" Grid.Column="5" Grid.Row="0" Grid.RowSpan="6" ItemsSource="{Binding Registers,Mode=OneWay}">
+        <ListView x:Name="ListViewRegisters" Grid.Column="5" Grid.Row="0" Grid.RowSpan="8" ItemsSource="{Binding Registers,Mode=OneWay}">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Адрес" Width="50" DisplayMemberBinding="{Binding  Path=AddresRegister,Mode=OneWay}"/>
@@ -36,10 +38,10 @@
             </ListView.View>
         </ListView>
         <GridSplitter Grid.Column="1"  Grid.Row="0" Width="2" 
-                      HorizontalAlignment="Center" VerticalAlignment="Stretch" Grid.RowSpan="4" />
-        <GridSplitter Grid.Column="4"  Grid.Row="0" Width="2" 
                       HorizontalAlignment="Center" VerticalAlignment="Stretch" Grid.RowSpan="6" />
-        <GridSplitter Grid.Row="4" Grid.ColumnSpan="4" Height="2"
+        <GridSplitter Grid.Column="4"  Grid.Row="0" Width="2" 
+                      HorizontalAlignment="Center" VerticalAlignment="Stretch" Grid.RowSpan="8" />
+        <GridSplitter Grid.Row="6" Grid.ColumnSpan="4" Height="2"
                       HorizontalAlignment="Stretch" VerticalAlignment="Center" />
         <Label Content="Выбор установки:" HorizontalAlignment="Left" Margin="10,10,0,0" Width="130" Height="32" VerticalAlignment="Top" />
         <ComboBox Text="Номер деконтоминатора" Margin="145,10,10,0" Height="32" VerticalAlignment="Top" ItemsSource="{Binding Decontaminators}" SelectedValue="{Binding DecontaminatorSlaveId, Mode=TwoWay}" SelectedIndex="0">
@@ -49,29 +51,33 @@
 
         </ComboBox>
 
-        <StackPanel  Grid.Column="0" Grid.Row="1" Grid.RowSpan="3">
+        <StackPanel  Grid.Column="0" Grid.Row="1" Grid.RowSpan="5">
             <CheckBox IsChecked="{Binding IsPolling}" Content="Опрос регистров" Margin="20,10,0,10"/>
             <Button Command="{Binding ExecuteStopCommand}" Margin="20,10,20,10" FontSize="14" IsEnabled="{Binding IsEnabled}">Останов</Button>
-            <Button Command="{Binding ExecuteStartDecontaminationCommand}"  Margin="20,10,20,10" FontSize="14" IsEnabled="{Binding IsEnabled}">Деконтаминация</Button>
+            <Button Command="{Binding ExecuteStartDecontominationCommand}"  Margin="20,10,20,10" FontSize="14" IsEnabled="{Binding IsEnabled}">Деконтаминация</Button>
             <Button Command="{Binding ExecuteStartDryCommand}" FontSize="14" Margin="20,10,20,10" IsEnabled="{Binding IsEnabled}">Осушение воздуха</Button>
             <Button Command="{Binding ExecuteOpenComPortCommand}" FontSize="14" Margin="20,10,20,10" IsEnabled="{Binding IsEnabledOpenComPort}">Open COM Port</Button>
             <Button Command="{Binding ExecuteCloseComPortCommand}" FontSize="14" Margin="20,10,20,10" IsEnabled="{Binding IsEnabled}" >Close  COM Port</Button>
             <Button Command="{Binding ExecuteResetAvarCommand}" FontSize="14" Margin="20,10,20,10" IsEnabled="{Binding IsEnabled}" >Сброс отказов</Button>
         </StackPanel>
         <TextBlock TextWrapping="Wrap" Text="текущий режим и этап работы деконтаминатора" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" TextAlignment="Center" FontSize="16" Grid.Column="2" Grid.Row="0"/>
-        <TextBlock TextWrapping="Wrap" Text="текущее значение температуры" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" TextAlignment="Center" FontSize="16" Grid.Column="2" Grid.Row="1" />
-        <TextBlock TextWrapping="Wrap" Text="текущее значение влажности" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" TextAlignment="Center" FontSize="16" Grid.Column="2" Grid.Row="2" />
-        <TextBlock TextWrapping="Wrap" Text="текущее значение концентрации перекиси водорода" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" TextAlignment="Center" FontSize="16" Grid.Column="2" Grid.Row="3" />
-        <TextBlock TextWrapping="Wrap" Text="{Binding CurrentReg}" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" TextAlignment="Center" FontSize="16" Grid.Column="3" Grid.Row="0"/>
-        <TextBlock TextWrapping="Wrap" Text="{Binding CurrentTerm}" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" TextAlignment="Center" FontSize="16" Grid.Column="3" Grid.Row="1" />
-        <TextBlock TextWrapping="Wrap" Text="{Binding CurrentHum}" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" TextAlignment="Center" FontSize="16" Grid.Column="3" Grid.Row="2" />
-        <TextBlock TextWrapping="Wrap" Text="{Binding CurrentH2O2}" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" TextAlignment="Center" FontSize="16" Grid.Column="3" Grid.Row="3" />
 
-        
-        <TextBox Grid.ColumnSpan="4" VerticalScrollBarVisibility="Auto" Grid.Row="5" Margin="3,3,3,3" TextWrapping="Wrap" Text="{Binding InfoMessage}" FontWeight="Bold" Foreground="#FF7E0303"/>
+        <TextBlock TextWrapping="Wrap" Text="Температура воздуха" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" TextAlignment="Center" FontSize="16" Grid.Column="2" Grid.Row="1"/>
+        <TextBlock TextWrapping="Wrap" Text="Влажность" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" TextAlignment="Center" FontSize="16" Grid.Column="2" Grid.Row="2"/>
 
-            <!--            <TextBlock FontSize="16" Text="{Binding InfoMessage}" TextAlignment="Center" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="#FFFB0101">Message</TextBlock> -->
-        
+        <TextBlock TextWrapping="Wrap" Text="Концентрация перекиси водорода" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" TextAlignment="Center" FontSize="16" Grid.Column="2" Grid.Row="3" />
+        <TextBlock TextWrapping="Wrap" Text="{Binding CurrentReg}" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" TextAlignment="Center" FontSize="18" Grid.Column="3" Grid.Row="0" FontWeight="Bold"/>
+        <TextBlock TextWrapping="Wrap" Text="{Binding CurrentTerm}" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" TextAlignment="Center" FontSize="18" Grid.Column="3" Grid.Row="1" FontWeight="Bold" />
+        <TextBlock TextWrapping="Wrap" Text="{Binding CurrentHum}" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" TextAlignment="Center" FontSize="18" Grid.Column="3" Grid.Row="2" FontWeight="Bold" />
+        <TextBlock TextWrapping="Wrap" Text="{Binding CurrentH2O2}" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" TextAlignment="Center" FontSize="18" Grid.Column="3" Grid.Row="3" FontWeight="Bold" />
+        <TextBlock TextWrapping="Wrap" Text="{Binding CurrentTteni}" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" TextAlignment="Center" FontSize="18" Grid.Column="3" Grid.Row="4" FontWeight="Bold" />
+        <TextBlock TextWrapping="Wrap" Text="{Binding CurrentTpvi}" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" TextAlignment="Center" FontSize="18" Grid.Column="3" Grid.Row="5" FontWeight="Bold" />
+
+
+        <TextBox Grid.ColumnSpan="4" VerticalScrollBarVisibility="Auto" Grid.Row="7" Margin="3,3,3,3" TextWrapping="Wrap" Text="{Binding InfoMessage}" FontWeight="Bold" Foreground="#FF7E0303"/>
+
+        <!--            <TextBlock FontSize="16" Text="{Binding InfoMessage}" TextAlignment="Center" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="#FFFB0101">Message</TextBlock> -->
+
         <Label Content="Выбор режима:" HorizontalAlignment="Left" Margin="10,51,0,0" Width="130" Height="32" VerticalAlignment="Top" IsEnabled="False" />
         <ComboBox Text="Выбор режима" Margin="145,51,10,0" Height="32" VerticalAlignment="Top" ItemsSource="{Binding Regims}" IsEnabled="False" >
             <ComboBox.Effect>
@@ -79,6 +85,8 @@
             </ComboBox.Effect>
 
         </ComboBox>
+        <TextBlock TextWrapping="Wrap" Text="Температура ТЭН испарителя" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" TextAlignment="Center" FontSize="16" Grid.Column="2" Grid.Row="4"  />
+        <TextBlock TextWrapping="Wrap" Text="Температура ПВ испарителя" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" TextAlignment="Center" FontSize="16" Grid.Column="2" Grid.Row="5" />
     </Grid>
 
 
